<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".frameActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_toStartOf="@+id/edtName"
            android:textSize="20sp"
            android:text="@string/ner" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            android:text="@string/defaultName"
            android:hint="@string/hintName"/>


        <TextView
            android:id="@+id/txtAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtName"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_toStartOf="@+id/edtAge"
            android:text="@string/nas"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtAge"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtName"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:text="@string/defaultAge"
            android:hint="@string/hintAge"/>

        <Button
            android:id="@+id/btnFrameOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAge"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btnFrameCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtAge"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btnFrameOk"
            android:text="@string/cancel" />

    </RelativeLayout>
</FrameLayout>