<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frameLayout"/>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="40dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:text="@string/ner" />

        <TextView
            android:id="@+id/resName"
            android:layout_width="40dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/txtAge"
            android:layout_width="40dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:text="@string/nas" />

        <TextView
            android:id="@+id/resAge"
            android:layout_width="40dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/line"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:text="@string/java"/>
        <CheckBox
            android:id="@+id/cboxJava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/c"/>
        <CheckBox
            android:id="@+id/cboxC"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/cSharp"/>
        <CheckBox
            android:id="@+id/cboxCsharp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:id="@+id/btnTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/tableLayout"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radBtnMale"
                    android:text="@string/genderMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/radBtnFemale"
                    android:text="@string/genderFemale"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <TextView
                android:id="@+id/txtTimePicker"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>
    </TableLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnRelative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relative"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>